# pm3d-training-data-compiler

./: .gitignore  B4I-Data_Report summary 12.9.25.csv  README.md  Untitled.ipynb  print_tree.py  pyproject.toml  readme.md  run_pipeline.py
config/: b4i.yaml  biomass.yaml  biomass_b4i.yaml  biomass_calib_cover_crops.yaml  calib_cover_crops.yaml  calibration.yaml  image.yaml  pipeline.yaml
notebooks/: Untitled.ipynb  test_wide_transform.ipynb
notebooks/test_data/: DE-VanGessel - Cover Crops - Biomass Datasheet - 2025.csv
reports/templates/: calibration_report.html
scripts/: build_biomass_master.py  build_calibration_dataset.py  build_calibration_report.py  build_image_master.py
src/analytics_pipeline/: paths.py
src/analytics_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/analytics_pipeline/config/: config.py  load.py  logging_config.py  validate.py
src/analytics_pipeline/google_drive/: __init__.py  auth.py  client.py  manager.py
src/analytics_pipeline/postgres/: __init__.py  client.py  datasets.py  engine.py
src/analytics_pipeline/processing/: cache.py
src/analytics_pipeline/processing/acquisition/: biomass_drive.py  postgres.py
src/analytics_pipeline/processing/adapters/: biomass_adapter.py
src/analytics_pipeline/processing/datasets/: __init__.py  biomass_master.py  calibration.py  image_master.py
src/analytics_pipeline/processing/loaders/: biomass_csv.py
src/analytics_pipeline/processing/schema/: biomass_schema.py  validate.py
tests/: test_biomass_cleaning.py  test_biomass_format.py  test_cache.py  test_calibration.py  test_config_validation.py  test_image_cleaning.py  test_load.py  test_paths.py  test_plot_id.py
(+4 files in other folders)
