[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics_pipeline"
version = "0.1.0"
description = "Data pipeline for the PM3D biomass training data"
readme = "README.md"
requires-python = ">=3.10"

# Runtime dependencies (expand later as needed)
dependencies = [
    "pandas",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "google-api-python-client>=2.80",
    "google-auth>=2.20",
    "google-auth-oauthlib>=1.1",
    "openpyxl>=3.1"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["analytics_pipeline*"]