[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics_pipeline"
version = "0.1.0"
description = "Data pipeline for the PM3D biomass training data"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Maria Laura Cangiano" }
]

# Runtime dependencies (expand later as needed)
dependencies = [
    "google-api-python-client>=2.177",
    "google-auth>=2.40",
    "google-auth-oauthlib>=1.2",
    "openpyxl>=3.1",
    "pandas>=2.3",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.1",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["analytics_pipeline*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff.lint.isort]
known-first-party = [
    "analytics_pipeline",
]